fix project page spacing and text sizes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,8 +126,8 @@ body {
 .big-paragraph {
   font-weight: 500;
   font-style: Medium;
-  font-size: 36px;
-  line-height: 50px;
+  font-size: 56px;
+  line-height: 60px;
   letter-spacing: 0%;
 }
 
